--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,9 +16,11 @@ services:
       - ./src:/src
       - ./data/log:/log
       - ./engines:/engines
-    command: >
-      bash -c "sleep 5 && service docker start &&
-               python manage.py runserver 0.0.0.0:6000"
+      - ./entrypoint:/entrypoint
+    command: python manage.py runserver 0.0.0.0:6000
+    entrypoint:
+      - init
+      - /entrypoint/managedocker.sh
     # Privileged is required to run docker inside docker
     privileged: true
     # Use the following command instead to use gunicorn which is closer to production, however isn't ideal for development due to caching
